@@ -134,8 +134,14 @@ public class SimpleStatistics extends Statistics implements SteadyStateStatistic
             {
             best_i[x] = state.population.subpops[x].individuals[0];
             for(int y=1;y<state.population.subpops[x].individuals.length;y++)
-                if (state.population.subpops[x].individuals[y].fitness.betterThan(best_i[x].fitness))
+            	{
+            	if (state.population.subpops[x].individuals[y] == null)
+            		state.output.warnOnce("Null individuals found in subpopulation");
+	            else if (best_i[x] == null || state.population.subpops[x].individuals[y].fitness.betterThan(best_i[x].fitness))
                     best_i[x] = state.population.subpops[x].individuals[y];
+	            if (best_i[x] == null)
+            		state.output.warnOnce("Null individuals found in subpopulation");
+                }
         
             // now test to see if it's the new best_of_run
             if (best_of_run[x]==null || best_i[x].fitness.betterThan(best_of_run[x].fitness))
